# CodingChallenge

./: .gitignore
3dCube/: cube.js  index.html  index.js
JS/: index.css  index.html  index.js
JS/src/css/: index.css
JS/src/html/: animals.html  index.html
JS/src/js/: index.js
LowLevelObject/: README.MD  arrayImpl.cpp  vectorImpl.cpp
baseSwitcher/: converter  index.cpp  main.c  number.cpp  output
baseSwitcherAPI/: .gitignore  CMakeLists.txt  index.html  main.cc
baseSwitcherAPI/controllers/: readme.md  v1_Base.cc  v1_Base.h
baseSwitcherAPI/src/: convert.cpp  convert.h  index.cpp  index.h
baseSwitcherAPI/test/: CMakeLists.txt  test_convert.cpp
cpp-js-demo/: README.md  binding.gyp  index.js  package.json
cpp-js-demo/bindings/: addon.cpp  functionexample.cpp  functionexample.hpp
socket/: README.md  server.c
turboBus/: README.md  index.js
wheaFromChaff/: first.cpp  second.cpp  third.cpp
